refactor/workdata all functions including notification without test
# Conflicts:
#	Back-End/src/main/java/net/scit/backend/schedule/service/impl/ScheduleServiceImpl.java